final fix for animated text spacing

--- a/styles/components/TextSlide.scss
+++ b/styles/components/TextSlide.scss
@@ -11,7 +11,9 @@
   }
 
   .word {
-    margin-inline: clamp(0.25rem, 0.4vw, 0.4vw);
+    &-wrapper {
+      padding-inline: clamp(0.5rem, 0.5vw, 0.5vw);
+    }
   }
 
   &__wrapper {
@@ -33,7 +35,7 @@
       margin: 0;
       display: inline-block;
       line-height: 1.1;
-      font-size: clamp(4rem, 4.6vw, 8vw);
+      font-size: clamp(4.6rem, 4.6vw, 8vw);
 
       * {
         font-family: "Monument Grotesk", Helvetica, sans-serif;
@@ -41,7 +43,7 @@
     }
 
     .font--alt {
-      font-size: clamp(4rem, 4.6vw, 8vw);
+      font-size: clamp(4.6rem, 4.6vw, 8vw);
       font-style: italic;
       text-align: left;
       font-weight: 300;
@@ -53,15 +55,15 @@
         font-family: "Da Vinci", serif;
       }
 
-      .word-wrapper {
-        padding-left: 6px;
-      }
+      // .word-wrapper {
+      //   padding-left: 6px;
+      // }
 
-      @media only screen and (min-width: $screen-medium) {
-        .word-wrapper {
-          padding-left: 7px;
-        }
-      }
+      // @media only screen and (min-width: $screen-medium) {
+      //   .word-wrapper {
+      //     padding-left: 7px;
+      //   }
+      // }
     }
 
     span {
